--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta name="propeller" content="904c71a00ca20eb49ecfe1622cfec19b" />
+    <meta charset="utf-8">
     <title>Super Endless Kingdom</title>
     <!--<script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>-->
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <script  src="https://code.jquery.com/jquery-3.1.1.min.js"  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="  crossorigin="anonymous"></script>    <link href="style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="phaser.min.js"></script>
     <!--<script type="text/javascript" src="compressed.js"></script>-->
     <script type="text/javascript" src="typewriter.js"></script>
@@ -44,6 +45,29 @@
       <p class="blurb">in this fast&#8209;paced</p>
       <p class="blurb">retro arcade shooter?</p>
     </div>
+    <button id="signupButton">Subscribe to our mailing list for updates.</button>
+		<!-- Begin MailChimp Signup Form -->
+		<div id="mc_embed_signup">
+		<form action="//herokuapp.us15.list-manage.com/subscribe/post?u=203fb7018c48d86ee7ee3ac64&amp;id=5233a9675d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		    <div id="mc_embed_signup_scroll">
+			<p id="signup-header">Subscribe to our mailing list</p>
+		<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+		<div class="mc-field-group">
+			<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+		</label>
+			<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+		</div>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_203fb7018c48d86ee7ee3ac64_5233a9675d" tabindex="-1" value=""></div>
+		    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+		    </div>
+		</form>
+		</div>
+		<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+		<!--End mc_embed_signup-->
   </div>
   
   <div class="mid-container">
@@ -55,6 +79,7 @@
       <h3>Keyboard Controls:</h3>
       <p>Walk Up/Down/Left/Right: <span class="key">W</span><span class="key">A</span><span class="key">S</span><span class="key">D</span></p>
       <p>Shoot Up/Down/Left/Right: <span class="key">↑</span><span class="key">↓</span><span class="key">←</span><span class="key">→</span></p>
+      <p>Berkserker Melee Attack: <span class="key" id="melee">SPACE</span></p>
     </div>
   </div>  
   <div class="right-container">
@@ -97,11 +122,12 @@
       Your browser does not support the video tag.
     </video> 
     <script type="text/javascript">
+    /*global $*/
       $(document).ready(function() {
         $('video').on('ended', function(){
-          $('video').load()
+          $('video').load();
         });
-        $('#signupButton').on('click', function() {
+        $('#signupButton').click(function() {
           $('#mc_embed_signup').fadeToggle(400, "linear");
           console.log('clicked');
         });
