small wording changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="propeller" content="904c71a00ca20eb49ecfe1622cfec19b" />
     <meta charset="utf-8">
-    <title>Super Endless Kingdom</title>
+    <title>Super Endless Kingdom - FREE Online RPG Shoot 'em up Game</title>
     <!--<script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>-->
     <script  src="https://code.jquery.com/jquery-3.1.1.min.js"  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="  crossorigin="anonymous"></script>    <link href="style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="phaser.min.js"></script>
@@ -72,7 +72,7 @@
   
   <div class="mid-container">
   <div class="announcement">
-    <p>Super Endless Kingdom Mega Quest Extreme is currently in beta testing. Please contact us with any feedback or suggestions you may have.</p>
+    <p>Super Endless Kingdom Mega Quest Extreme is a free to play HTML5 game currently in beta testing. Please contact us with any feedback or suggestions you may have.</p>
   </div>   
     
     <div class="controls">
