--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>Super Endless Kingdom - FREE Online RPG Shoot 'em up Game</title>
     <!--<script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>-->
-    <script  src="https://code.jquery.com/jquery-3.1.1.min.js"  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="  crossorigin="anonymous"></script>    <link href="style.css" rel="stylesheet" type="text/css">
+    <script  src="https://code.jquery.com/jquery-3.1.1.min.js"  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="  crossorigin="anonymous"></script>    
+    <link href="style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="phaser.min.js"></script>
     <!--<script type="text/javascript" src="compressed.js"></script>-->
     <script type="text/javascript" src="typewriter.js"></script>
