--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
   </div>
   
   <div class="mid-container">
-  <div class="announcement">
-    <p>Super Endless Kingdom Mega Quest Extreme is a free to play HTML5 game currently in beta testing. Please contact us with any feedback or suggestions you may have.</p>
-  </div>   
+  <!--<div class="announcement">
+    <p>Super Endless Kingdom Mega Quest Extreme is currently in beta testing. Please contact us with any feedback or suggestions you may have.</p>
+  </div>--> 
     
     <div class="controls">
       <h3>Keyboard Controls:</h3>
